fixing asset compilation problem. Fixing z-index problem affecting safari

--- a/app/assets/stylesheets/to_dos.scss
+++ b/app/assets/stylesheets/to_dos.scss
@@ -5,19 +5,6 @@
 $tiny_icon_size: 18px;
 $left_nav_width: 31.5rem;
 
-header.devise-header > p {
-
-  margin: 0 0 0.1em 0;
-  position: fixed;
-  z-index: 1;
-  top: 3.3em;
-  padding: 0.5em;
-  border-radius: 4px;
-  margin-left: 72%;
-  margin-right: 1em;
-  color: white;
-
-}
 
 .sprite {
 
@@ -45,6 +32,20 @@ header.devise-header > p {
   }
 }
 
+header.devise-header > p {
+
+  margin: 0 0 0.1em 0;
+  position: fixed;
+  z-index: 1;
+  top: 3.3em;
+  padding: 0.5em;
+  border-radius: 4px;
+  margin-left: 72%;
+  margin-right: 1em;
+  color: white;
+
+}
+
 .alert {
   background-color:rgba(224, 158, 188, 0.84);
 }
@@ -59,7 +60,8 @@ header.devise-header > p {
 }
 
 .heading {
-
+  
+  z-index: 1;
   font-size: 1.3em;
   font-weight: bold;
   padding-bottom: 0.5em;
@@ -143,7 +145,6 @@ fieldset > input , fieldset > select, #destination__search-opts, #select--sort-t
   position: relative; 
   display: inline;
   float:left;
-  z-index: -1;
 
 }
 
@@ -152,13 +153,14 @@ fieldset > input , fieldset > select, #destination__search-opts, #select--sort-t
 }
 
 .nav__left {
+  z-index: 0;
   width: $left_nav_width;
   display: inline;
-
 }
 
 #nav-buttons {
-
+  
+  z-index: 1;
   left: $left_nav_width;
   position: fixed;
   top: 0.7rem;
